syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GeneratorProto";
option objc_class_prefix = "RTG";
package grpc.service;

service Service {
  rpc Unary (Request) returns (Response) {}
  rpc ServerSideStreaming (Request) returns (stream Response) {}
  rpc ClientSideStreaming (stream Request) returns (Response) {}
  rpc BidirectionalStreaming (stream Request) returns (stream Response) {}
}

message Request {
  string rqId = 1;
  int64 timestamp = 2;
  string message = 3;
}

message Response {
  string rsId = 1;
  int64 timestamp = 2;
  string details = 3;
  int32 count = 4;
}